--- a/物流/ui/mainwindow.ui
+++ b/物流/ui/mainwindow.ui
@@ -498,26 +498,17 @@ font: 12pt &quot;Microsoft YaHei UI&quot;;</string>
            </size>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
-           <item row="1" column="2">
-            <widget class="QPushButton" name="del_user_btn">
-             <property name="minimumSize">
-              <size>
-               <width>0</width>
-               <height>14</height>
-              </size>
-             </property>
-             <property name="baseSize">
-              <size>
-               <width>15</width>
-               <height>14</height>
-              </size>
-             </property>
+           <item row="1" column="1">
+            <widget class="QPushButton" name="user_edit_btn">
              <property name="text">
-              <string>删除</string>
+              <string>修改</string>
+             </property>
+             <property name="checkable">
+              <bool>false</bool>
              </property>
             </widget>
            </item>
-           <item row="0" column="0" colspan="3">
+           <item row="0" column="0" colspan="4">
             <widget class="QTableWidget" name="table_users">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -574,13 +565,29 @@ font: 12pt &quot;Microsoft YaHei UI&quot;;</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
-            <widget class="QPushButton" name="user_edit_btn">
-             <property name="text">
-              <string>修改</string>
+           <item row="1" column="3">
+            <widget class="QPushButton" name="del_user_btn">
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>14</height>
+              </size>
              </property>
-             <property name="checkable">
-              <bool>false</bool>
+             <property name="baseSize">
+              <size>
+               <width>15</width>
+               <height>14</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>删除</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="2">
+            <widget class="QPushButton" name="reload_btn">
+             <property name="text">
+              <string>刷新</string>
              </property>
             </widget>
            </item>
