--- a/物流/ui/mainwindow.ui
+++ b/物流/ui/mainwindow.ui
@@ -39,7 +39,7 @@
           <string notr="true">background-color: rgb(255, 255, 255);</string>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>3</number>
          </property>
          <widget class="QWidget" name="page_4">
           <layout class="QGridLayout" name="gridLayout_9"/>
@@ -307,7 +307,7 @@
                   <second>0</second>
                   <year>2023</year>
                   <month>8</month>
-                  <day>8</day>
+                  <day>7</day>
                  </datetime>
                 </property>
                 <property name="minimumDate">
@@ -578,7 +578,7 @@
                   <second>0</second>
                   <year>2023</year>
                   <month>8</month>
-                  <day>9</day>
+                  <day>8</day>
                  </datetime>
                 </property>
                 <property name="minimumDate">
@@ -691,7 +691,7 @@
               <string>保存数据</string>
              </property>
              <property name="checkable">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
             </widget>
            </item>
