--- a/物流/ui/mainwindow.ui
+++ b/物流/ui/mainwindow.ui
@@ -39,7 +39,7 @@
           <string notr="true">background-color: rgb(255, 255, 255);</string>
          </property>
          <property name="currentIndex">
-          <number>3</number>
+          <number>2</number>
          </property>
          <widget class="QWidget" name="page_4">
           <layout class="QGridLayout" name="gridLayout_9"/>
@@ -331,7 +331,7 @@
               <item>
                <widget class="QLabel" name="label_10">
                 <property name="text">
-                 <string>三方单号</string>
+                 <string>三方单号（未使用）</string>
                 </property>
                </widget>
               </item>
@@ -602,7 +602,7 @@
               <item>
                <widget class="QLabel" name="label_7">
                 <property name="text">
-                 <string>三方单号</string>
+                 <string>三方单号（未使用）</string>
                 </property>
                </widget>
               </item>
@@ -1162,55 +1162,6 @@ font: 12pt &quot;Microsoft YaHei UI&quot;;</string>
            </property>
            <property name="text">
             <string>用户</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLCDNumber" name="lcdNumber">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-             <horstretch>1</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="sizeIncrement">
-            <size>
-             <width>0</width>
-             <height>1</height>
-            </size>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">color: rgb(114, 255, 250);</string>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::WinPanel</enum>
-           </property>
-           <property name="frameShadow">
-            <enum>QFrame::Plain</enum>
-           </property>
-           <property name="lineWidth">
-            <number>4</number>
-           </property>
-           <property name="midLineWidth">
-            <number>10</number>
-           </property>
-           <property name="smallDecimalPoint">
-            <bool>false</bool>
-           </property>
-           <property name="digitCount">
-            <number>13</number>
-           </property>
-           <property name="mode">
-            <enum>QLCDNumber::Oct</enum>
-           </property>
-           <property name="segmentStyle">
-            <enum>QLCDNumber::Filled</enum>
-           </property>
-           <property name="value" stdset="0">
-            <double>5.000000000000000</double>
-           </property>
-           <property name="intValue" stdset="0">
-            <number>5</number>
            </property>
           </widget>
          </item>
